--- a/src/index.html
+++ b/src/index.html
@@ -1,33 +1,79 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui" />
-	<meta name="apple-mobile-web-app-capable" content="yes">
-	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-	<title>Splat ECS Starter Project</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui" />
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <title>Duolastic by Two Scoop Games</title>
 
-		<style type="text/css">
-		html, body {
-			margin: 0;
-			padding: 0;
-			width: 100%;
-			height: 100%;
-			overflow: hidden;
-		}
-		canvas {
-			width: 100%;
-			height: 100%;
-			-webkit-user-select: none;
-			-moz-user-select: none;
-			-ms-user-select: none;
-			-o-user-select: none;
-			user-select: none;
-		}
-	</style>
+  <style type="text/css">
+  html, body {
+    background: black;
+    color: white;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+  }
+  canvas {
+    width: 100%;
+    height: 100%;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+  }
+  #mobile-warning{
+    display: none;
+    font-size: 28px;
+    height: 100vh;
+    font-family: sans-serif;
+    padding: 24% 25px;
+  }
+  </style>
 </head>
 <body>
-	<canvas id="canvas" />
-	<script type="text/javascript" src="index.js"></script>
+  <div id="mobile-warning">
+    This game is not compatable with mobile devices.
+    <br/>Please try on a computer with keyboard.
+  </div>
+  <canvas id="canvas"></canvas>
+  <script type="text/javascript" src="index.js"></script>
+
+  <script>
+
+  function detectmob() {
+    if( navigator.userAgent.match(/Android/i)
+    || navigator.userAgent.match(/webOS/i)
+    || navigator.userAgent.match(/iPhone/i)
+    || navigator.userAgent.match(/iPad/i)
+    || navigator.userAgent.match(/iPod/i)
+    || navigator.userAgent.match(/BlackBerry/i)
+    || navigator.userAgent.match(/Windows Phone/i)
+  ){
+    return true;
+  }
+  else {
+    return false;
+  }
+}
+if(detectmob()){
+  var mobileWarning = document.getElementById('mobile-warning');
+  mobileWarning.style.display = 'block';
+}
+</script>
+<script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+ga('create', 'UA-48152351-19', 'auto');
+ga('send', 'pageview');
+</script>
+
 </body>
 </html>
